@@ -30,14 +30,24 @@
                         {% include "wagtailadmin/shared/field_as_li.html" with field=form.password2 %}
                         {% include "wagtailadmin/shared/field_as_li.html" with field=form.is_active %}
                     {% endblock fields %}
-                    <li><input type="submit" value="{% trans 'Save' %}" class="button" /></li>
+                    <li>
+                        <input type="submit" value="{% trans 'Save' %}" class="button" />
+                        {% if can_delete %}
+                            <a href="{% url 'wagtailusers_users:delete' user.pk %}" class="button button-secondary no">{% trans "Delete user" %}</a>
+                        {% endif %}
+                    </li>
                 </ul>
             </section>
             <section id="roles" class="nice-padding">
                 <ul class="fields">
                     {% include "wagtailadmin/shared/field_as_li.html" with field=form.is_superuser %}
                     {% include "wagtailadmin/shared/field_as_li.html" with field=form.groups %}
-                    <li><input type="submit" value="{% trans 'Save' %}" class="button" /></li>
+                    <li>
+                        <input type="submit" value="{% trans 'Save' %}" class="button" />
+                        {% if can_delete %}
+                            <a href="{% url 'wagtailusers_users:delete' user.pk %}" class="button button-secondary no">{% trans "Delete user" %}</a>
+                        {% endif %}
+                    </li>
                 </ul>
             </section>
         </div>
